--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
     <head>
+        <link rel ="stylesheet" type ="text/css" href="styles.css">
+
     <Title>My Website</Title></head>
     <body>
-        <img src = "file:/C:/Users/USER/Documents/GitHub/Frontend/Image/image-qr-code.png" alt = "logo" >
-    </body>
+        <img src = "file:/C:/Users/USER/Documents/GitHub/Frontend/Image/image-qr-code.png" alt = "logo" height="250px" width="200px">
+
     <h2> Improve your front-end <br>
-        skills by building projects
+    skills by building projects
     </h2>
     <h4>Scan the QR code to visit frontend <br> mentor and take your coding skills to <br> the next level</h4>
+    </body>
 </html>
 
 
