--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
-<html>
-    <head>
-        <link rel ="stylesheet" type ="text/css" href="styles.css">
 
-    <Title>My Website</Title></head>
-    <body>
-        <img src = "file:/C:/Users/USER/Documents/GitHub/Frontend/Image/image-qr-code.png" alt = "logo" height="250px" width="200px">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-    <h2> Improve your front-end <br>
-    skills by building projects
-    </h2>
-    <h4>Scan the QR code to visit frontend <br> mentor and take your coding skills to <br> the next level</h4>
-    </body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link  href="https://fonts.googleapis.com" />
+    <link href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+
+    <title>Frontend Mentor | QR code component</title>
+  </head>
+  <body>
+    <main>
+      <article class="QR">
+          <img src="file:C:/Users/USER/Documents/GitHub/Frontend/Image/image-qr-code.png" alt="QR Code"
+        /></a>
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </article>
+    </main>
+  </body>
 </html>
-
-
